--- a/templates/index.html
+++ b/templates/index.html
@@ -18,5 +18,8 @@
         <form action="/light/off" method="POST">
             <input type="submit" value="Turn Light Off">
         </form>
+        <form action="/light/blink" method="POST">
+            <input type="submit" value="Blinking Light">
+        </form>
     </body>
 </html>
